[package]
name = "orcar"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
cpal = "0.13.4"
mp3-duration = "0.1.7"
crossbeam = "0.8.0"
env_logger = "0.8.3"
futures = "0.3.14"
log = "0.4.14"
num_enum = "0.5.1"
rodio = "0.13.1"
tokio = { version = "1.5.0", features = ["full"] }

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static", "link-arg=-s"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "target-feature=+crt-static", "link-arg=-s"]

[[bin]]
name = "client"
path = "src/run_client.rs"

[[bin]]
name = "server"
path = "src/run_server.rs"
